package de.ruegnerlukas.strategygame.backend.economy.service

import de.ruegnerlukas.strategygame.backend.economy.data.EconomyNode

class ProductionNodeUpdateService(private val productionEntityUpdateService: ProductionEntityUpdateService) {

    fun update(node: EconomyNode) {
        updateChildren(node)
        updateEntities(node)
    }

    private fun updateChildren(node: EconomyNode) {
        node.getChildren().forEach { update(it) }
    }

    private fun updateEntities(node: EconomyNode) {
        node.getEntities()
            .filter { it.isActive() }
            .filter { it.isReadyForOutput() }
            .sortedBy { it.getPriority() }
            .forEach { productionEntityUpdateService.update(it) }
    }

}